<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_outline_face_24"
            android:title="@string/my_info" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_slideshow" />
    </group>
</menu>