<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.attendance.office.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.attendance.office.ui.profile.ProfileFragment"
        android:label="@string/my_info"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_info"
        android:name="com.attendance.office.ui.info.InfoFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_info" />


    <fragment
        android:id="@+id/nav_logout"
        android:name="com.attendance.office.ui.logout.LogoutFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
</navigation>