<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible"
        android:scaleType="fitXY"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        app:srcCompat="@drawable/building" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:paddingLeft="10dp"
        android:background="@color/new_transparent"
        android:paddingBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/empID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/empWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/empID"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:text="@string/nav_header_subtitle" />
    </RelativeLayout>
</RelativeLayout>